--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "io.coil-kt:coil:0.11.0"
+    implementation "io.coil-kt:coil:0.9.5"
 
 }
